terraform/aws/implementation/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: phdi-playground-${terraform_workspace}
    alb.ingress.kubernetes.io/certificate-arn: ${aws_acm_certificate_arn}
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"userPoolARN":"${cognito_user_pool_arn}","userPoolClientID":"${cognito_client_id}","userPoolDomain":"${cognito_domain}"}'
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: authenticate
    alb.ingress.kubernetes.io/auth-scope: openid
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /ingestion
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-ingestion-ingestion-service
                port:
                  number: 8080
          - path: /fhir-converter
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-fhir-converter-fhir-converter-service
                port:
                  number: 8080
          - path: /message-parser
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-message-parser-message-parser-service
                port:
                  number: 8080
          - path: /validation
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-validation-validation-service
                port:
                  number: 80
          - path: /orchestration
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-orchestration-orchestration-service
                port:
                  number: 8080
