terraform/aws/implementation/manifests/ingressWithoutCognito.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: phdi-playground-${terraform_workspace}
    alb.ingress.kubernetes.io/certificate-arn: ${aws_acm_certificate_arn}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /ingestion
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-ingestion-ingestion-service
                port:
                  number: 8080
          - path: /fhir-converter
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-fhir-converter-fhir-converter-service
                port:
                  number: 8080
          - path: /message-parser
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-message-parser-message-parser-service
                port:
                  number: 8080
          - path: /validation
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-validation-validation-service
                port:
                  number: 80
          - path: /orchestration
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-orchestration-orchestration-service
                port:
                  number: 8080
          - path: /ecr-viewer
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-ecr-viewer-ecr-viewer-service
                port:
                  number: 3000
          - path: /tefca-viewer
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-tefca-viewer-tefca-viewer-service
                port:
                  number: 8080
          - path: /otel-grpc
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-otel-collector
                port:
                  number: 4317  # gRPC OTLP receiver
          - path: /otel-http
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-otel-collector
                port:
                  number: 4318  # HTTP OTLP receiver
          - path: /otel-prometheus
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-otel-collector
                port:
                  number: 8889  # Prometheus endpoint
          - path: /otel-metrics
            pathType: Prefix
            backend:
              service:
                name: phdi-playground-${terraform_workspace}-otel-collector
                port:
                  number: 8888  # Prometheus metrics exposed by collector                
          # - path: /prometheus
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: phdi-playground-${terraform_workspace}-prometheus-prometheus-service
          #       port:
          #         number: 9090
          # - path: /grafana
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: phdi-playground-${terraform_workspace}-grafana-grafana-service
          #       port:
          #         number: 4000
